Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123967

QML media player example project fails to play AV1 encoded videos.

XMLWordPrintable

    • Windows
    • d9a38a71b (dev), e67b5d7e8 (dev), c0c16261a (6.7), 771d63d63 (6.7), cb1e5b126 (tqtc/lts-6.5), b8fe73b76 (tqtc/lts-6.5), 865de67f3 (dev), 03948d735 (6.7), c3265e394 (tqtc/lts-6.5)
    • Multimedia wk 15-16

      QML media player example fails to play AV1 encoded videos.

      To reproduce the issue:

      1- Open QML media player example project.

      2- Choose the video attached to this bug report.

      Notes:

      1. The issue doesn't exist in Qt 6.6.2 and Qt 6.6.1.

      2. The issue  doesn't appear  when adding " _putenv ("QT_MEDIA_BACKEND=windows"); " in main.cpp before the app is created if the AV1 Video Extension is installed in your operating system.

        For Gerrit Dashboard: QTBUG-123967
        # Subject Branch Project Status CR V

            johanseg Jøger Hansegård
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: