Fix corrupt frames when playing AV1 videos on Windows

Over-allocate the number of frames in FFmpeg's frame pool to take into
account that we keep frames from FFmpeg decoders alive until they are
displayed.

This reduces the risk of bumpy playback and corrupt images when playing
AV1 videos.

Amends: 1e3e0fac0d1c3b0772958bb590be263f7114bd45

Fixes: QTBUG-123967
Task-number: QTBUG-115308
Pick-to: 6.5
Change-Id: I41c204c10898c6384cc0eaf349ded236cbc73376
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit e67b5d7e8d300f602fdae2d17511e9917dd1445d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>